--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,8 @@ footer-info{
   border: 1px solid black;
   width: 400px;
   height: 400p;
-  border-radius: 5px;  
+  border-radius: 5px; 
+  background-color: white; 
 }
 .content-h1{
   font-size: 35px;
@@ -117,7 +118,9 @@ footer-info{
   border: 1 px solid black;
   margin-top: 20px;
   margin-bottom: 150px;
+  
 }
+
 .content-h3{
   font-size: 22px;
   padding: 5px 0;
@@ -132,7 +135,8 @@ footer-info{
 .content-card{
   border: 1px solid black;
   padding: 2rem 30px;
-  border-radius: 5px;  
+  border-radius: 5px;
+  background-color: white;  
 }
 .table-title{
   text-align: center;
@@ -143,6 +147,7 @@ table {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+  
 }
 td, th {
   border: 1px solid #dddddd;
@@ -150,5 +155,23 @@ td, th {
   padding: 8px;
   text-align: center;  
 }
-
+#dark{
+  background-color: rgb(56, 51, 51);
+}
+#light{
+  background-color: white;
+}
+.table-content{
+  background-color: white;
+  margin: 10px 25px;
+  padding: 10px 0;
+}
+.toggle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.switch-span{
+  margin-right: 7px;
+}
 
